# Acoustic-Room-Recreation-Android-Application

./: README.md
C++ Files/: extract_vertices.cpp  prune_echoes.cpp  tri_back_double.cpp  trilaterate_back.cpp
android/: local.properties
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/bitbucket/arrc/arrc_acousticroomrecreation/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: Android.mk  Application.mk  ext_funcs.cpp  ext_funcs.h  images.txt  loudspeaker.txt  microphones.txt  prune_echoes.cpp  prune_echoes.h  roomshape.cpp  roomshape_old.cpp  support_func.h  trilaterate_back.cpp  trilaterate_back.h
android/app/src/main/cpp/Eigen/src/Core/: CommaInitializer.h
android/app/src/main/cpp/lrslib/: Android.mk  Config.mk  input.txt  lrsgmp.h  lrslib.h  lrslong.h
android/app/src/main/java/com/bitbucket/arrc/arrc_acousticroomrecreation/: MainActivity.java  RoomShapeActivity.java  SweepActivity.java  WavFile.java  WavFileException.java
android/app/src/main/res/layout/: activity_main.xml  activity_room_shape.xml  activity_sweep.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: line_format.xml  point_format.xml
android/app/src/test/java/com/bitbucket/arrc/arrc_acousticroomrecreation/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
